--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: در جست‌وجوی آزادی
 author: دانیال بهزادی
 email: dani.behzi@ubuntu.com
 description: > # this means to ignore newlines until "baseurl:"
-  منتشر شده با پروانه‌ی CC-BY-SA 
+  منتشر شده با پروانهٔ CC-BY-SA 
   
   در سال‌های ۱۳۹۳ تا ۱۳۹۴
 baseurl: "/weblog" # the subpath of your site, e.g. /blog/
@@ -11,7 +11,7 @@ url: "http://danialbehzadi.github.io" # the base hostname & protocol for your si
 twitter_username: danialbehzadi
 github_username:  danialbehzadi
 
-gems: ['jekyll_pdate_plugin']
+gems: [jekyll_pdate_plugin]
 
 # Handling Reading
 encoding: utf-8
